src/parser/package.d
/* Copyright (c) 2018 <Jérôme Richard>
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

module parser;

import std.stdio;
import std.range.primitives;
import std.algorithm.comparison;
import std.algorithm.iteration;
import std.array;
import std.typecons;
import std.format;
import std.traits;
import std.variant;
import interfaces;
import parser.types;
import parser.ast;
import utils;

AstNodeLocation toAstLoc(ParserTokenLocation loc)
{
    return AstNodeLocation(loc.filename, loc.line, loc.col, 
                            loc.pos, loc.length);
}

// From startLoc (included) to endLoc (excluded)
AstNodeLocation toAstLoc(ParserTokenLocation startLoc, ParserTokenLocation endLoc)
{
    return AstNodeLocation(startLoc.filename, startLoc.line, 
                            startLoc.col, startLoc.pos,
                            endLoc.pos - startLoc.pos);
}

// Transform a ILexer to a usual input range
// Note: this range must not preload data as the lexer 
// may not have been configured before.
private struct LexerRange
{
    private
    {
        alias This = typeof(this);

        ILexer _lexer;
        Nullable!LexerToken _result;
        bool _first = true;
    }


    this(ILexer lexer)
    {
        _lexer = lexer;
    }

    @property bool empty()
    {
        if(_first)
        {
            _result = _lexer.next();
            _first = false;
        }

        return _result.isNull;
    }

    @property auto front()
    {
        if(_first)
        {
            _result = _lexer.next();
            _first = false;
        }

        assert(!_result.isNull);
        return _result.get;
    }

    void popFront()
    {
        if(_first)
        {
            _result = _lexer.next();
            _first = false;
        }

        if(!_result.isNull)
            _result = _lexer.next();
    }
}

// Type-aware lexing range with a lookahead support
private struct TypedLexerRange(Range)
{
    private
    {
        alias This = typeof(this);

        Range _input;
        ParserTokenType[string][] _types; // stack of scoped types
        int _scopeLevel;
        CircularQueue!LexerToken _lookAhead;
    }


    this(Range input)
    {
        _input = input;
        _scopeLevel = 0; // global scope
    }

    ~this()
    {
        assert(_scopeLevel == 0);
    }

    // Tag the beginning of a function (for local types)
    void beginScope()
    {
        _scopeLevel++;
    }

    // Tag the end of a function to clean local types
    void endScope()
    {
        assert(_scopeLevel > 0);
        if(_types.length > _scopeLevel)
            _types[_scopeLevel-1].clear();
        _scopeLevel--;
    }

    void addTypeName(string name)
    {
        if(_types.length < _scopeLevel+1)
            _types.length = _scopeLevel+1;

        _types[_scopeLevel][name] = ParserTokenType.TYPE_NAME;
    }

    void addEnum(string name)
    {
        if(_types.length < _scopeLevel+1)
            _types.length = _scopeLevel+1;

        _types[_scopeLevel][name] = ParserTokenType.ENUM_VALUE;
    }

    bool exists(string name)
    {
        foreach(int i ; 0..min(_types.length, _scopeLevel))
            if(name in _types[i])
                return true;

        return false;
    }

    bool existsInScope(string name)
    {
        return _types.length > _scopeLevel && name in _types[_scopeLevel];
    }

    @property bool empty()
    {
        return _lookAhead.empty && _input.empty;
    }

    private auto toParserToken(LexerToken token)
    {
        if(token.type == LexerTokenType.IDENTIFIER)
        {
            auto identifier = token.value.get!LexerIdentifierTokenValue.name;

            foreach(int i ; 0..min(_types.length, _scopeLevel))
            {
                auto type = identifier in _types[i];

                if(type !is null)
                    return ParserToken(*type, token.location, token.value);
            }

            return ParserToken(ParserTokenType.IDENTIFIER, token.location, token.value);
        }

        auto resType = token.type.convertEnum!(LexerTokenType, ParserTokenType, "NUMBER", "ERROR");
        return ParserToken(resType, token.location, token.value);
    }

    @property auto front()
    {
        assert(!_input.empty);
        if(!_lookAhead.empty)
            return toParserToken(_lookAhead.front);
        return toParserToken(_input.front);
    }

    // Retrieve a tokens by looking ahead.
    // k is the number of tokens skiped before the token to return.
    // Skiped tokens are temporary stored, but always re-evaluated later.
    auto lookAhead(int k)
    {
        if(_lookAhead.length > k)
            return toParserToken(_lookAhead[k]);

        foreach(i ; 0..(k-_lookAhead.length))
        {
            assert(!_input.empty);
            pragma(msg, "[FIXME] Handle the case where there is no token left (return EOF?)");
            _lookAhead.put(_input.front);
            _input.popFront();
        }

        assert(!_input.empty);
        auto last = _input.front;
        _input.popFront();
        _lookAhead.put(last); // last value put in cache
        return toParserToken(last);
    }

    void popFront()
    {
        assert(!_lookAhead.empty || !_input.empty);
        if(!_lookAhead.empty)
            _lookAhead.popFront();
        else
            _input.popFront();
    }
}

// A pseudo-LL(2) predictive recursive descent parser
//
// Parsing strategy:
//   This parser is based on the near-C formal grammar itself derived from
//   the official ISO C89 grammar.
//   No backtracking is needed as the current and the next token are always 
//   sufficient to take a good decision (that is why it is a predictive parser).
//   It use some tricks to parse parameterDeclaration due to the ambiguity 
//   of the language using a method we call bottom-up feedback.
//   Indeed, the ISO C89 grammar is not a context free grammar: since a lexer 
//   is not able to detect if identifiers are types or variables (it should 
//   be independent of the grammar), it cause ambiguity during the parsing 
//   of declarations VS expressions.
//   It is important to note the typedef are scoped and that identifiers can 
//   be redefined from type to variables and vice-versa (shadowing).
//   This point is fixed using an intermediate range between the lexer and the
//   parser to track typedefs and define if identifiers are types or variables.
//   The parameterDeclaration rule also cause a lot of issue due to the 
//   aliasing between abstract and concrete declarators.
//
// Error management:
//   The parser stop on the first error encountered and try to report a proper error.
//   In order to report quite readable errors, only the most probable tokens and/or 
//   the one that end the rule are expected (eg. ';' for statements).
pragma(msg, "[FIXME] Check conflicts (LR vs RL)");
pragma(msg, "[FIXME] Check associativity: left to right vs right to left eval (use reverse ?)");
pragma(msg, "[FIXME] Bad error location at the end of the file due to a missing EOF token");
pragma(msg, "[FIXME] Errors should expect rules rather than token subsets (add checks before parsing subrules)");
pragma(msg, "[FIXME] Update the parser range when a declaration is found (typedef, shadow var def, etc.)");
pragma(msg, "[OPTIM] Use a LALR(1) sub-parser for expressions (faster)");
class Parser : IParser, IGo
{
    private
    {
        alias ParserRange = TypedLexerRange!(LookAhead!LexerRange);
        alias GenericDeclarator = Algebraic!(Declarator, AbstractDeclarator);
        alias GenericDirectDeclarator = Algebraic!(DirectDeclarator, DirectAbstractDeclarator);

        ParserRange _lexer;
        IErrorHandler _errorHandler;
        string[] _funcLocalTypes;
    }


    this(ILexer lexer, IErrorHandler errorHandler)
    {
        _lexer = ParserRange(lookAhead(LexerRange(lexer)));
        _errorHandler = errorHandler;
    }


    /******************** GENERIC PARSING FUNCTIONS ********************/

    void fail(string msg, ParserTokenLocation loc = ParserTokenLocation())
    {
        // Skip remaining tokens for the lexical analysis to check further errors
        _lexer.walkLength;

        _errorHandler.criticalError(msg, loc.filename, loc.line, loc.col, loc.length);
    }

    void updateLoc(ref ParserTokenLocation loc)
    {
        if(!_lexer.empty)
            loc = _lexer.front.location;
    }

    void skip(ref ParserTokenLocation loc)
    {
        _lexer.popFront();
        updateLoc(loc);
    }

    bool condSkip(ParserTokenType type)(ref ParserTokenLocation loc)
    {
        if(currTok.type != type)
            return false;

        skip(loc);
        return true;
    }

    void unexpected(string expectedStr, ref ParserTokenLocation loc)
    {
        if(currTok.type == ParserTokenType.EOF)
            fail(format!"expected %s, but got end of file"(expectedStr));
        else
            fail(format!"expecting %s, but got `%s`"(expectedStr, _lexer.front.toString), _lexer.front.location);

        assert(false, "programming error");
    }

    @property ParserToken currTok()
    {
        if(_lexer.empty)
            return ParserToken(ParserTokenType.EOF, ParserTokenLocation(), ParserTokenValue());
        return _lexer.front;
    }

    @property ParserToken nextTok()
    {
        if(_lexer.empty)
            return ParserToken(ParserTokenType.EOF, ParserTokenLocation(), ParserTokenValue());
        return _lexer.lookAhead(1);
    }


    /******************** ACTUAL PARSING FUNCTIONS ********************/

    // LL(1) token table generated by the analysis python script from the formal grammar
    bool matchTranslationUnit(ParserToken token) { with(ParserTokenType) return token.type.among(SHORT, ENUM, CONST, UNSIGNED, TYPE_NAME, DOUBLE, EXTERN, STATIC, SIGNED, OP_MUL, AUTO, REGISTER, TYPEDEF, STRUCT, VOID, UNION, INT, FLOAT, IDENTIFIER, CHAR, LONG, LPAREN, VOLATILE) > 0; };
    bool matchExternalDeclaration(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, SHORT, AUTO, REGISTER, ENUM, CONST, TYPEDEF, STRUCT, VOID, UNSIGNED, TYPE_NAME, UNION, INT, FLOAT, IDENTIFIER, CHAR, LONG, LPAREN, DOUBLE, EXTERN, VOLATILE, STATIC, SIGNED) > 0; };
    bool matchDeclarationSpecifier(ParserToken token) { with(ParserTokenType) return token.type.among(SHORT, AUTO, REGISTER, ENUM, CONST, TYPEDEF, STRUCT, VOID, UNSIGNED, TYPE_NAME, UNION, INT, FLOAT, CHAR, LONG, DOUBLE, EXTERN, VOLATILE, STATIC, SIGNED) > 0; };
    bool matchStorageClassSpecifier(ParserToken token) { with(ParserTokenType) return token.type.among(TYPEDEF, EXTERN, AUTO, STATIC, REGISTER) > 0; };
    bool matchTypeSpecifier(ParserToken token) { with(ParserTokenType) return token.type.among(UNION, SHORT, INT, FLOAT, CHAR, LONG, ENUM, DOUBLE, STRUCT, VOID, UNSIGNED, SIGNED, TYPE_NAME) > 0; };
    bool matchStructOrUnionSpecifier(ParserToken token) { with(ParserTokenType) return token.type.among(UNION, STRUCT) > 0; };
    bool matchStructDeclaration(ParserToken token) { with(ParserTokenType) return token.type.among(UNION, SHORT, INT, FLOAT, OP_MUL, COL, IDENTIFIER, CHAR, LONG, LPAREN, ENUM, DOUBLE, CONST, STRUCT, TYPE_NAME, VOID, UNSIGNED, SIGNED, VOLATILE) > 0; };
    bool matchSpecifierQualifier(ParserToken token) { with(ParserTokenType) return token.type.among(UNION, SHORT, INT, FLOAT, CHAR, LONG, VOLATILE, ENUM, DOUBLE, CONST, STRUCT, VOID, UNSIGNED, SIGNED, TYPE_NAME) > 0; };
    bool matchStructDeclaratorList(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, COL, LPAREN, IDENTIFIER) > 0; };
    bool matchStructDeclarator(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, COL, LPAREN, IDENTIFIER) > 0; };
    bool matchDeclarator(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, LPAREN, IDENTIFIER) > 0; };
    bool matchPointer(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL) > 0; };
    bool matchTypeQualifier(ParserToken token) { with(ParserTokenType) return token.type.among(CONST, VOLATILE) > 0; };
    bool matchDirectDeclarator(ParserToken token) { with(ParserTokenType) return token.type.among(LPAREN, IDENTIFIER) > 0; };
    bool matchConstantExpression(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, OP_ADD, NUMBER, SIZEOF, OP_SUB, IDENTIFIER, INTEGER, CHARACTER, LPAREN, ENUM_VALUE, STRING, OP_BNOT, OP_DEC, OP_INC, OP_BAND) > 0; };
    bool matchConditionalExpression(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, OP_ADD, NUMBER, SIZEOF, OP_SUB, IDENTIFIER, INTEGER, CHARACTER, LPAREN, ENUM_VALUE, STRING, OP_BNOT, OP_DEC, OP_INC, OP_BAND) > 0; };
    bool matchLogicalOrExpression(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, OP_ADD, NUMBER, SIZEOF, OP_SUB, IDENTIFIER, INTEGER, CHARACTER, LPAREN, ENUM_VALUE, STRING, OP_BNOT, OP_DEC, OP_INC, OP_BAND) > 0; };
    bool matchLogicalAndExpression(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, OP_ADD, NUMBER, SIZEOF, OP_SUB, IDENTIFIER, INTEGER, CHARACTER, LPAREN, ENUM_VALUE, STRING, OP_BNOT, OP_DEC, OP_INC, OP_BAND) > 0; };
    bool matchInclusiveOrExpression(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, OP_ADD, NUMBER, SIZEOF, OP_SUB, IDENTIFIER, INTEGER, CHARACTER, LPAREN, ENUM_VALUE, STRING, OP_BNOT, OP_DEC, OP_INC, OP_BAND) > 0; };
    bool matchExclusiveOrExpression(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, OP_ADD, NUMBER, SIZEOF, OP_SUB, IDENTIFIER, INTEGER, CHARACTER, LPAREN, ENUM_VALUE, STRING, OP_BNOT, OP_DEC, OP_INC, OP_BAND) > 0; };
    bool matchAndExpression(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, OP_ADD, NUMBER, SIZEOF, OP_SUB, IDENTIFIER, INTEGER, CHARACTER, LPAREN, ENUM_VALUE, STRING, OP_BNOT, OP_DEC, OP_INC, OP_BAND) > 0; };
    bool matchEqualityExpression(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, OP_ADD, NUMBER, SIZEOF, OP_SUB, IDENTIFIER, INTEGER, CHARACTER, LPAREN, ENUM_VALUE, STRING, OP_BNOT, OP_DEC, OP_INC, OP_BAND) > 0; };
    bool matchRelationalExpression(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, OP_ADD, NUMBER, SIZEOF, OP_SUB, IDENTIFIER, INTEGER, CHARACTER, LPAREN, ENUM_VALUE, STRING, OP_BNOT, OP_DEC, OP_INC, OP_BAND) > 0; };
    bool matchShiftExpression(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, OP_ADD, NUMBER, SIZEOF, OP_SUB, IDENTIFIER, INTEGER, CHARACTER, LPAREN, ENUM_VALUE, STRING, OP_BNOT, OP_DEC, OP_INC, OP_BAND) > 0; };
    bool matchAdditiveExpression(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, OP_ADD, NUMBER, SIZEOF, OP_SUB, IDENTIFIER, INTEGER, CHARACTER, LPAREN, ENUM_VALUE, STRING, OP_BNOT, OP_DEC, OP_INC, OP_BAND) > 0; };
    bool matchMultiplicativeExpression(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, OP_ADD, NUMBER, SIZEOF, OP_SUB, IDENTIFIER, INTEGER, CHARACTER, LPAREN, ENUM_VALUE, STRING, OP_BNOT, OP_DEC, OP_INC, OP_BAND) > 0; };
    bool matchCastExpression(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, OP_ADD, NUMBER, SIZEOF, OP_SUB, IDENTIFIER, INTEGER, CHARACTER, LPAREN, ENUM_VALUE, STRING, OP_BNOT, OP_DEC, OP_INC, OP_BAND) > 0; };
    bool matchUnaryExpression(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, OP_ADD, NUMBER, SIZEOF, OP_SUB, IDENTIFIER, INTEGER, CHARACTER, LPAREN, ENUM_VALUE, STRING, OP_BNOT, OP_DEC, OP_INC, OP_BAND) > 0; };
    bool matchPostfixExpression(ParserToken token) { with(ParserTokenType) return token.type.among(NUMBER, IDENTIFIER, INTEGER, ENUM_VALUE, CHARACTER, LPAREN, STRING) > 0; };
    bool matchPrimaryExpression(ParserToken token) { with(ParserTokenType) return token.type.among(NUMBER, IDENTIFIER, INTEGER, ENUM_VALUE, CHARACTER, LPAREN, STRING) > 0; };
    bool matchConstant(ParserToken token) { with(ParserTokenType) return token.type.among(INTEGER, CHARACTER, NUMBER, ENUM_VALUE) > 0; };
    bool matchCompositeExpression(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, OP_ADD, NUMBER, SIZEOF, OP_SUB, IDENTIFIER, INTEGER, CHARACTER, LPAREN, ENUM_VALUE, STRING, OP_BNOT, OP_DEC, OP_INC, OP_BAND) > 0; };
    bool matchAssignmentExpression(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, OP_ADD, NUMBER, SIZEOF, OP_SUB, IDENTIFIER, INTEGER, CHARACTER, LPAREN, ENUM_VALUE, STRING, OP_BNOT, OP_DEC, OP_INC, OP_BAND) > 0; };
    bool matchAssignmentOperator(ParserToken token) { with(ParserTokenType) return token.type.among(ASSIGN, ADD_ASSIGN, OR_ASSIGN, RSHIFT_ASSIGN, AND_ASSIGN, DIV_ASSIGN, LSHIFT_ASSIGN, MUL_ASSIGN, MOD_ASSIGN, SUB_ASSIGN, XOR_ASSIGN) > 0; };
    bool matchUnaryOperator(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, OP_ADD, OP_BNOT, OP_SUB, OP_BAND) > 0; };
    bool matchTypename(ParserToken token) { with(ParserTokenType) return token.type.among(UNION, SHORT, INT, FLOAT, VOID, CHAR, LONG, ENUM, DOUBLE, CONST, STRUCT, VOLATILE, UNSIGNED, SIGNED, TYPE_NAME) > 0; };
    bool matchParameterList(ParserToken token) { with(ParserTokenType) return token.type.among(UNION, SHORT, INT, FLOAT, AUTO, CHAR, REGISTER, LONG, ENUM, DOUBLE, CONST, VOLATILE, TYPEDEF, STRUCT, EXTERN, VOID, UNSIGNED, STATIC, SIGNED, TYPE_NAME) > 0; };
    bool matchParameterDeclaration(ParserToken token) { with(ParserTokenType) return token.type.among(UNION, SHORT, INT, FLOAT, AUTO, CHAR, REGISTER, LONG, ENUM, DOUBLE, CONST, VOLATILE, TYPEDEF, STRUCT, EXTERN, VOID, UNSIGNED, STATIC, SIGNED, TYPE_NAME) > 0; };
    bool matchGenericDeclarator(ParserToken token) { with(ParserTokenType) return token.type.among(LBRACK, OP_MUL, LPAREN, IDENTIFIER) > 0; };
    bool matchGenericDirectDeclarator(ParserToken token) { with(ParserTokenType) return token.type.among(LBRACK, LPAREN, IDENTIFIER) > 0; };
    bool matchAbstractDeclarator(ParserToken token) { with(ParserTokenType) return token.type.among(LBRACK, OP_MUL, LPAREN) > 0; };
    bool matchDirectAbstractDeclarator(ParserToken token) { with(ParserTokenType) return token.type.among(LBRACK, LPAREN) > 0; };
    bool matchEnumSpecifier(ParserToken token) { with(ParserTokenType) return token.type.among(ENUM) > 0; };
    bool matchEnumerator(ParserToken token) { with(ParserTokenType) return token.type.among(IDENTIFIER) > 0; };
    bool matchDeclaration(ParserToken token) { with(ParserTokenType) return token.type.among(UNION, SHORT, INT, FLOAT, AUTO, CHAR, REGISTER, LONG, ENUM, DOUBLE, CONST, VOLATILE, TYPEDEF, STRUCT, EXTERN, VOID, UNSIGNED, STATIC, SIGNED, TYPE_NAME) > 0; };
    bool matchInitDeclarator(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, LPAREN, IDENTIFIER) > 0; };
    bool matchInitializer(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, LCURL, OP_ADD, NUMBER, SIZEOF, OP_SUB, IDENTIFIER, INTEGER, CHARACTER, LPAREN, ENUM_VALUE, STRING, OP_BNOT, OP_DEC, OP_INC, OP_BAND) > 0; };
    bool matchInitializerList(ParserToken token) { with(ParserTokenType) return token.type.among(LCURL) > 0; };
    bool matchCompoundStatement(ParserToken token) { with(ParserTokenType) return token.type.among(LCURL) > 0; };
    bool matchStatement(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, BREAK, CONTINUE, IF, OP_INC, LCURL, OP_ADD, NUMBER, GOTO, SIZEOF, FOR, SEMICOLON, WHILE, OP_SUB, SWITCH, DEFAULT, DO, IDENTIFIER, INTEGER, CHARACTER, LPAREN, RETURN, ENUM_VALUE, STRING, OP_BNOT, OP_DEC, CASE, OP_BAND) > 0; };
    bool matchLabeledStatement(ParserToken token) { with(ParserTokenType) return token.type.among(CASE, DEFAULT, IDENTIFIER) > 0; };
    bool matchExpressionStatement(ParserToken token) { with(ParserTokenType) return token.type.among(OP_MUL, OP_NOT, IDENTIFIER, INTEGER, CHARACTER, LPAREN, OP_ADD, ENUM_VALUE, STRING, NUMBER, OP_BNOT, SIZEOF, OP_DEC, SEMICOLON, OP_INC, OP_SUB, OP_BAND) > 0; };
    bool matchSelectionStatement(ParserToken token) { with(ParserTokenType) return token.type.among(SWITCH, IF) > 0; };
    bool matchIterationStatement(ParserToken token) { with(ParserTokenType) return token.type.among(WHILE, DO, FOR) > 0; };
    bool matchJumpStatement(ParserToken token) { with(ParserTokenType) return token.type.among(CONTINUE, GOTO, BREAK, RETURN) > 0; };

    override void go()
    {
        auto loc = currTok.location;
        parseTranslationUnit(loc);

        pragma(msg, "[FIXME] to be continued");
    }

    TranslationUnit parseTranslationUnit(ref ParserTokenLocation loc)
    {
        auto startLoc = loc;
        auto externalDecls = appender!(ExternalDeclaration[])();

        while(matchExternalDeclaration(currTok))
            externalDecls ~= parseExternalDeclaration(loc);

        with(ParserTokenType)
            if(currTok.type != EOF)
                unexpected("declaration or function", loc);

        return new TranslationUnit(externalDecls.data, toAstLoc(startLoc, loc));
    }

    ExternalDeclaration parseExternalDeclaration(ref ParserTokenLocation loc)
    {
        with(ParserTokenType)
        {
            auto startLoc = loc;
            auto specifiers = appender!(DeclarationSpecifier[])();

            while(matchDeclarationSpecifier(currTok))
                specifiers ~= parseDeclarationSpecifier(loc);

            if(!specifiers.data.empty && condSkip!SEMICOLON(loc))
                return new Declaration(specifiers.data, [], toAstLoc(startLoc, loc));

            auto declarator = parseDeclarator(loc);

            if(currTok.type.among(ASSIGN, COMMA, SEMICOLON))
            {
                auto initDecls = appender!(InitDeclarator[])();
                Initializer initializer = null;

                if(condSkip!ASSIGN(loc))
                    initializer = parseInitializer(loc);

                initDecls ~= new InitDeclarator(declarator, initializer, toAstLoc(startLoc, loc));

                while(condSkip!COMMA(loc))
                    initDecls ~= parseInitDeclarator(loc);

                if(!condSkip!SEMICOLON(loc))
                    unexpected("`;`", loc);

                return new Declaration(specifiers.data, initDecls.data, toAstLoc(startLoc, loc));
            }
            else if(matchDeclaration(currTok) || matchCompoundStatement(currTok))
            {
                auto declarations = appender!(Declaration[])();

                while(matchDeclaration(currTok))
                    declarations ~= parseDeclaration(loc);

                auto statement = parseCompoundStatement(loc);
                return new FunctionDefinition(specifiers.data, declarator, declarations.data, 
                                                statement, toAstLoc(startLoc, loc));
            }

            unexpected("declaration or function definition", loc);
            assert(false);
        }
    }

    DeclarationSpecifier parseDeclarationSpecifier(ref ParserTokenLocation loc)
    {
        auto startLoc = loc;

        if(matchStorageClassSpecifier(currTok))
            return parseStorageClassSpecifier(loc);

        if(matchTypeSpecifier(currTok))
            return parseTypeSpecifier(loc);

        if(matchTypeQualifier(currTok))
            return parseTypeQualifier(loc);

        unexpected("declaration specifier", loc);
        assert(false);
    }

    StorageClassSpecifier parseStorageClassSpecifier(ref ParserTokenLocation loc)
    {
        static foreach(e ; ["AUTO", "REGISTER", "STATIC", "EXTERN", "TYPEDEF"])
            if(condSkip!(mixin("ParserTokenType." ~ e))(loc))
                return new StorageClassSpecifier(mixin("StorageClassSpecifierEnum." ~ e), loc.toAstLoc);

        unexpected("storage class specifier", loc);
        assert(false);
    }
